<resources>
    <string name="app_name">Projectx</string>
        <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="nav_header_title">Bussines</string>
    <string name="nav_header_subtitle">androd</string>
    <string name="nav_header_desc">Bussines</string>
    <string name="action_settings">Configuracion</string>
    <string name="menu_quienes_somos">Quienes somos</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_partners">Partners</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_perfil">perfil</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contactanos">Contactanos</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Noticias</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_historia">historia</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar o registrar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">Contraseña debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Ingreso fallido"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragmento blanco</string>
</resources>