<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_historia"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_historia" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_faq" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_quienes"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_quienes_somos" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_baseline_verified_24"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_baseline_work_outline_24"
            android:title="@string/menu_partners" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_campaign_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_contactanos"
            android:icon="@drawable/ic_baseline_connect_without_contact_24"
            android:title="@string/menu_contactanos" />
    </group>
</menu>