<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectx.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_quienes"
        android:name="com.example.projectx.ui.quienes.quienessomos"
        android:label="quienes"
        tools:layout="@layout/fragment_quienessomos" />
    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.example.projectx.ui.servicios.servicios"
        android:label="servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/nav_historia"
        android:name="com.example.projectx.ui.historia.ItemFragment"
        android:label="@string/menu_historia"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/nav_partners"
        android:name="com.example.projectx.ui.partners.partners"
        android:label="partners"
        tools:layout="@layout/partners_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.projectx.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.projectx.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_item" />
    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.projectx.ui.faq.ItemListDialogFragments"
        android:label="faq"
        tools:layout="@layout/fragment_item_list_dialog_fragments_list_dialog" />
    <fragment
        android:id="@+id/nav_contactanos"
        android:name="com.example.projectx.ui.contactanos.contactanos"
        android:label="contactanos"
        tools:layout="@layout/fragment_contactanos" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.projectx.ui.perfil.ui.login.LoginFragment"
        android:label="perfil"
        tools:layout="@layout/fragment_login" />






</navigation>